# cjp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: codecov.yml  rust.yml
example/: Cargo.toml
example/src/: main.rs
examples/: as_cjp.rs
src/: dict.rs  lib.rs
