[package]
name = "cjp"
description = "A library for converting strings to 怪レい日本语(Ayashī Nihongo)."
version = "0.1.0"
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license = "MIT"
repository = "https://github.com/Rinrin0413/cjp-rs.git"
readme = "README.md"
keywords = ["cjp", "correctJP", "Japanese"]
edition = "2021"

[dependencies]
